# ob

./: README.md  pyproject.toml
.github/workflows/: auto-merge.yml  autotable-update.yml
examples/: .ob_config
src/ob/: cli.py  commands.py
